Services/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-clusterip-srv #name of service
spec:
  selector:
    app: mongo #selector of your deployment
  ports:
    - name: mongo 
      protocol: TCP
      port: 27017 #port you want to access
      targetPort: 27017 #port your container running
